fix dummy image spacing

--- a/newamericadotorg/assets/scss/pages/simple/_event-list.scss
+++ b/newamericadotorg/assets/scss/pages/simple/_event-list.scss
@@ -12,8 +12,11 @@
 
     &.with-image{
       .dummy-image{
-        position: absolute;
+        position: relative;
         z-index: 0;
+        svg{
+          position: absolute;
+        }
         .fa{
           display: none;
         }
